force-app/main/default/objects/Trigger_Setting__mdt/Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Controls trigger execution to allow easy turning off and on.</description>
    <label>Trigger Setting</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>