force-app/main/default/objects/Trigger_Setting__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AfterUpdate</label>
    <type>Checkbox</type>
</CustomField>