force-app/main/default/objects/Trigger_Setting__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>