force-app/main/default/objects/Trigger_Setting__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled?</label>
    <type>Checkbox</type>
</CustomField>