force-app/main/default/objects/Trigger_Setting__mdt/fields/Loops__c.field-meta.xml
<CustomField>
    <fullName>Loops__c</fullName>
    <label>Loops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>